// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layouts RandomNotes snapshots contain data content when requesting result is not empty in desktop 1`] = `
<ul
  class="MuiGridList-root"
  style="margin: -10px;"
>
  <li
    class="MuiGridListTile-root"
    style="width: 25%; height: 270px; padding: 10px;"
  >
    <div
      class="MuiGridListTile-tile"
    >
      <img
        alt="title"
        class="WhiteRandomNotes-img"
        src="image"
      />
      <div
        class="MuiGridListTileBar-root WhiteRandomNotes-gridListTileBar MuiGridListTileBar-titlePositionBottom"
      >
        <div
          class="MuiGridListTileBar-titleWrap"
        >
          <div
            class="MuiGridListTileBar-title"
          >
            title
          </div>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`layouts RandomNotes snapshots contain data content when requesting result is not empty in mobile 1`] = `
<ul
  class="MuiGridList-root"
  style="margin: -10px;"
>
  <li
    class="MuiGridListTile-root"
    style="width: 100%; height: 270px; padding: 10px;"
  >
    <div
      class="MuiGridListTile-tile"
    >
      <img
        alt="title"
        class="WhiteRandomNotes-img"
        src="image"
      />
      <div
        class="MuiGridListTileBar-root WhiteRandomNotes-gridListTileBar MuiGridListTileBar-titlePositionBottom"
      >
        <div
          class="MuiGridListTileBar-titleWrap"
        >
          <div
            class="MuiGridListTileBar-title"
          >
            title
          </div>
        </div>
      </div>
    </div>
  </li>
</ul>
`;
